...

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="422dp"
        android:layout_height="0dp"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/box11"
                android:layout_width="33dp"
                android:layout_height="32dp"
...
                android:text="@string/dropBox"
                app:layout_constraintBottom_toTopOf="@+id/fb24"
                app:layout_constraintEnd_toStartOf="@+id/box21"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/fb21" />
...
                android:background="@drawable/highlight"
                android:text="@string/dropBox"
                app:layout_constraintBottom_toTopOf="@+id/box24"
                app:layout_constraintStart_toEndOf="@+id/box33" />

...
                android:background="@drawable/highlight"
                android:text="@string/dropBox"
                app:layout_constraintBottom_toTopOf="@+id/box14"
                app:layout_constraintStart_toEndOf="@+id/box23" />

            <TextView
...
                android:text="@string/dropBox"
                app:layout_constraintBottom_toBottomOf="@+id/board"
                app:layout_constraintStart_toEndOf="@+id/box13" />

            <TextView
...
                android:layout_marginBottom="52dp"
                android:background="@drawable/check"
                app:layout_constraintBottom_toTopOf="@+id/check2"
                app:layout_constraintEnd_toEndOf="@+id/board"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:layout_marginBottom="52dp"
                android:background="@drawable/check"
                app:layout_constraintBottom_toTopOf="@+id/check1"
                app:layout_constraintEnd_toEndOf="@+id/board"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:text="@string/dropBox"
                app:layout_constraintBottom_toTopOf="@+id/box13"
                app:layout_constraintStart_toEndOf="@+id/box22" />

            <TextView
...
                android:text="@string/dropBox"
                app:layout_constraintBottom_toBottomOf="@+id/board"
                app:layout_constraintStart_toEndOf="@+id/box12" />

            <TextView
...

    <TextView
        android:id="@+id/taskBar1"
        android:layout_width="55dp"
        android:layout_height="53dp"
...

    <TextView
        android:id="@+id/taskBar2"
        android:layout_width="55dp"
        android:layout_height="53dp"
...

    <TextView
        android:id="@+id/taskBar3"
        android:layout_width="55dp"
        android:layout_height="53dp"
...

    <TextView
        android:id="@+id/taskBar4"
        android:layout_width="55dp"
        android:layout_height="53dp"
...

    <TextView
        android:id="@+id/taskBar5"
        android:layout_width="55dp"
        android:layout_height="53dp"
...

    <TextView
        android:id="@+id/taskBar6"
        android:layout_width="55dp"
        android:layout_height="53dp"
...

    <Button
        android:id="@+id/button2"
        android:layout_width="417dp"
        android:layout_height="87dp"
...
